# mistralrs-example

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build-check.yml
asm/: chkstk_darwin_stub.s
docs/: index.md
docs/upstream-patches/: 0001-feat-add-tvos-metal-shader-compilation-support.patch  README.md
src/: audio_transcription.rs  cli_chat.rs  image_generation.rs  main.rs  promp_enhancer.rs
