[package]
name = "mistralrs-test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4", features = ["derive"] }
mistralrs = { path = "../../Repositories/mistral.rs/mistralrs" }
tokio = "1.49.0"

# Enable Metal (Apple GPU) only on Apple platforms (macOS, iOS).
[target.'cfg(target_os = "macos")'.dependencies]
mistralrs = { path = "../../Repositories/mistral.rs/mistralrs", features = ["metal"] }

[target.'cfg(target_os = "ios")'.dependencies]
mistralrs = { path = "../../Repositories/mistral.rs/mistralrs", features = ["metal"] }

# Enable CUDA on Linux (activate by building with --features cuda).
[features]
default = []
cuda = ["mistralrs/cuda"]
flash-attn = ["cuda", "mistralrs/flash-attn"]
cudnn = ["mistralrs/cudnn"]
accelerate = ["mistralrs/accelerate"]
mkl = ["mistralrs/mkl"]

[build-dependencies]
cc = "1.2"
